# tokenstunt

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/scripts/: install.sh
.claude-plugin/skills/context/: SKILL.md
.claude-plugin/skills/impact/: SKILL.md
.claude-plugin/skills/search/: SKILL.md
.claude/commands/: tokenstunt-configure.md  tokenstunt-context.md  tokenstunt-impact.md  tokenstunt-overview.md  tokenstunt-search.md  tokenstunt-setup.md  tokenstunt-symbol.md
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/tokenstunt/: Cargo.toml
crates/tokenstunt-embeddings/: Cargo.toml
crates/tokenstunt-embeddings/src/: lib.rs  ollama.rs  openai.rs
crates/tokenstunt-index/: Cargo.toml
crates/tokenstunt-index/src/: indexer.rs  lib.rs  progress.rs  walker.rs  watcher.rs
crates/tokenstunt-parser/: Cargo.toml
crates/tokenstunt-parser/src/: extract.rs  languages.rs  lib.rs
crates/tokenstunt-parser/src/extract/: c_lang.rs  dart.rs  go.rs  helpers.rs  java.rs  kotlin.rs  mod.rs  python.rs  ruby.rs  rust_lang.rs  swift.rs  typescript.rs
crates/tokenstunt-search/: Cargo.toml
crates/tokenstunt-search/src/: lib.rs
crates/tokenstunt-server/: Cargo.toml
crates/tokenstunt-server/src/: format.rs  impact.rs  lib.rs  setup.rs  tools.rs
crates/tokenstunt-server/src/render/: bar.rs  mod.rs  primitives.rs  table.rs  tree.rs
crates/tokenstunt-store/: Cargo.toml
crates/tokenstunt-store/src/: lib.rs  models.rs  repo.rs  schema.rs
crates/tokenstunt/src/: config.rs  main.rs  output.rs  paths.rs
crates/tokenstunt/tests/: integration.rs
docs/superpowers/plans/: 2026-03-11-tokenstunt-v1-plan.md
docs/superpowers/specs/: 2026-03-11-tokenstunt-v1-design.md
hooks/: hooks.json
scripts/: bump-version.sh  install.sh
skills/configure/: SKILL.md
skills/context/: SKILL.md
skills/impact/: SKILL.md
skills/overview/: SKILL.md
skills/search/: SKILL.md
skills/setup/: SKILL.md
skills/symbol/: SKILL.md
