[workspace]
resolver = "2"
members = [
    "crates/tokenstunt",
    "crates/tokenstunt-server",
    "crates/tokenstunt-index",
    "crates/tokenstunt-search",
    "crates/tokenstunt-parser",
    "crates/tokenstunt-embeddings",
    "crates/tokenstunt-store",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/teobouancheau/tokenstunt"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
