[package]
name = "tokenstunt-embeddings"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
