[package]
name = "tokenstunt-parser"
version.workspace = true
edition.workspace = true

[dependencies]
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
