[package]
name = "tokenstunt-parser"
version.workspace = true
edition.workspace = true

[dependencies]
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-swift = { version = "0.6", optional = true }
tree-sitter-kotlin-ng = { version = "1.1", optional = true }
tree-sitter-dart-orchard = { version = "0.2", optional = true }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[features]
lang-swift = ["dep:tree-sitter-swift"]
lang-kotlin = ["dep:tree-sitter-kotlin-ng"]
lang-dart = ["dep:tree-sitter-dart-orchard"]
