[package]
name = "tokenstunt-server"
version.workspace = true
edition.workspace = true

[dependencies]
tokenstunt-store = { path = "../tokenstunt-store" }
tokenstunt-search = { path = "../tokenstunt-search" }
tokenstunt-index = { path = "../tokenstunt-index" }
tokenstunt-parser = { path = "../tokenstunt-parser" }
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokenstunt-embeddings = { path = "../tokenstunt-embeddings" }
async-trait = "0.1"
