[package]
name = "tokenstunt"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tokenstunt"
path = "src/main.rs"

[dependencies]
tokenstunt-server = { path = "../tokenstunt-server" }
rmcp = { version = "1", features = ["server", "transport-io"] }
tokenstunt-index = { path = "../tokenstunt-index" }
tokenstunt-store = { path = "../tokenstunt-store" }
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokenstunt-search = { path = "../tokenstunt-search" }
tokenstunt-parser = { path = "../tokenstunt-parser" }

[dev-dependencies]
tempfile = "3"
