[package]
name = "tokenstunt"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tokenstunt"
path = "src/main.rs"

[features]
lang-swift = ["tokenstunt-parser/lang-swift", "tokenstunt-index/lang-swift"]
lang-kotlin = ["tokenstunt-parser/lang-kotlin", "tokenstunt-index/lang-kotlin"]
lang-dart = ["tokenstunt-parser/lang-dart", "tokenstunt-index/lang-dart"]

[dependencies]
tokenstunt-server = { path = "../tokenstunt-server" }
rmcp = { version = "1", features = ["server", "transport-io"] }
tokenstunt-index = { path = "../tokenstunt-index" }
tokenstunt-store = { path = "../tokenstunt-store" }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokenstunt-search = { path = "../tokenstunt-search" }
tokenstunt-parser = { path = "../tokenstunt-parser" }
tokenstunt-embeddings = { path = "../tokenstunt-embeddings" }
indicatif = "0.17"
console = "0.15"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
